tests/ft/invalid/functions/redeclare_ext_func.jk
func h(a: int) { 12 }
ext func h(); // Should error out, function already declared
